# VistulaOS

./: .gitattributes  .gitignore  CHANGELOG.md  DEPLOYMENT-STATUS.md  README.md  RELEASE-1.3.0.md  REPOSITORY-UPDATE.md  build-arch-package.sh
.github/workflows/: publish-pacman-repo.yml
data/i18n/: en.json  pl.json
repo/vistula/os/x86_64/: README.md  vistula-updater-0.1.0-1-any.pkg.tar.zst  vistula-updater-0.1.1-1-any.pkg.tar.zst  vistula-updater-0.1.1-2-any.pkg.tar.zst  vistula-updater-0.1.2-1-any.pkg.tar.zst  (+3 more)
scripts/: update-pacman-repo.sh
src/: vistula_terminal.py
tools/Vistula-Terminal/: README.md
tools/Vistula-Terminal/src/: i18n.py  vistula_terminal.py
tools/vistula-updater/: .gitignore  PKGBUILD  README.md  make-tarball.sh  pyproject.toml  run.sh
tools/vistula-updater-rs/: Cargo.toml  MANUAL-PACKAGING.md  PKGBUILD  README.md  simulate-build.sh
tools/vistula-updater-rs/assets/i18n/: en.json  pl.json
tools/vistula-updater-rs/packaging/: vistula-updater-notifier.desktop  vistula-updater.desktop
tools/vistula-updater-rs/src/: cinnamon.rs  commands.rs  config.rs  flatpak.rs  i18n.rs  main.rs  notifier.rs  pacman.rs
tools/vistula-updater/packaging/: vistula-updater-notifier.desktop  vistula-updater.desktop
tools/vistula-updater/src/vistulla_updater/: __init__.py  app.py  cinnamon.py  commands.py  config.py  i18n.py  notifier.py
tools/vistulla-updater/: PKGBUILD  README.md  make-tarball.sh  pyproject.toml
tools/vistulla-updater/packaging/: vistulla-updater.desktop
vistula-installer/: .gitignore  PKGBUILD  README.md  RELEASE.md  pyproject.toml  vistula-installer.pkg.tar.zst
vistula-installer/.pkgbuild/: .MTREE  .PKGINFO
vistula-installer/.pkgbuild/pkg/usr/lib/vistula-installer/assets/i18n/: en.json  es.json  fr.json  pl.json  pt.json  ru.json  zh.json
vistula-installer/.pkgbuild/pkg/usr/lib/vistula-installer/vistula_installer/core/: __init__.py  config.py  executor.py  flatpak.py  i18n.py  software.py  themes.py
vistula-installer/.pkgbuild/pkg/usr/lib/vistula-installer/vistula_installer/ui/: __init__.py
vistula-installer/assets/i18n/: de.json  ja.json
vistula-installer/scripts/: build_linux_pyinstaller.sh
vistula-installer/vistula_installer/: __init__.py  main.py
vistula-installer/vistula_installer/core/: installer.py  locales.py  logging.py  network.py  timezones.py
vistula-installer/vistula_installer/ui/: gtk_wizard.py
(+6 files in other folders)
