[package]
name = "vistula-updater"
version = "1.3.0"
edition = "2021"
authors = ["Patryk"]
description = "Prosty GUI aktualizator systemu (pacman) i frontend Flatpak dla VistulaOS (Cinnamon)"

[[bin]]
name = "vistula-updater"
path = "src/main.rs"

[[bin]]
name = "vistula-updater-notifier"
path = "src/notifier.rs"

[dependencies]
# GUI - Iced framework (cross-platform, modern, WGPU renderer)
iced = { version = "0.12", features = ["debug"] }

# System/CLI
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# JSON i18n
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utility
regex = "1.10"
once_cell = "1.19"
which = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
