[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vistula-updater"
version = "0.1.1"
description = "Prosty GUI aktualizator systemu (pacman) i frontend Flatpak dla VistulaOS (Cinnamon)."
readme = "README.md"
requires-python = ">=3.10"

# Zależności runtime są dostarczane przez paczki systemowe (pacman),
# więc nie deklarujemy ich jako pipowe dependencies.

[project.scripts]
vistula-updater = "vistulla_updater.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
